# bilibot

./: .gitignore  base.py  bot.py  chat.py  danmu.py  debug.py  live.py  main.py  pyproject.toml  ui.py  ui.tcss
ai-chat/: chat.py
bot/: danmaku_listen.py
bot_helper/: danmaku_listen.py  ratelimit_sender.py
utils/: bot_msg.py  room_utils.py
